--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,3 +17,4 @@
 @import './layout/library-gallery';
 @import './layout/footer';
 @import './layout/modal-team';
+@import'./components/main-trend-page'
