--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,6 +1,6 @@
 <section class="pagination-section">
     <h2 class="visually-hidden">Section pagination</h2>
     <div class="container">
-        <ul class="pagination-library-container"></ul>
+        <ul class="pagination-library-container"><div id="pagination1" class="tui-pagination"></div></ul>
     </div>
 </section>
